--- a/aqMSfigs.Rmd
+++ b/aqMSfigs.Rmd
@@ -199,124 +199,319 @@ fig2Plts
 
 ## Supplemental plots
 
-#### Farm impacts over time
+## Figure S1
+
+Farm impacts over time for a high value open access fishery. In each plot the level of attraction is varied. Top plots represent one large farm at 20% total coverage (A, B), and the bottom plots represent the 20% farm area broken into several smaller farms (C, D). Biomass and catches are in relative to the base scenario with no farm (farm scenario/no farm scenario).
+
+```{r}
+### Color palettes
+
+### Attraction values
+attrCols<-beyonce_palette(19)[c(5,2:4)]#paletteer_d("ghibli::PonyoMedium")[c(1,3,6,4)]
+names(attrCols)<-c("1","3","9","15")
+
+
+### Farm size colors
+fsCols<-c(beyonce_palette(19)[5],beyonce_palette(22)[c(2,3,5)])#paletteer_d("ghibli::PonyoMedium")[c(1,3,6,4)]
+names(fsCols)<-c("20","10","5","2")
+
+
+```
+
 
 ```{r}
 
-jattDat<-read_csv("runs/openAccess/timeJattOA.csv")
+jattDat<-read_csv("runs/aqMS/timeJattOA_perc.csv")
 
 ##### Relative plots
 
 attLg<-jattDat%>%
-  filter(farmDesign=="large")
+  filter(farmDesign=="large",
+         year<101)
 
-diffBmOAJAtt<-ggplot(attLg[attLg$year>49,],aes(year, bmDiff,color=as.factor(run))) +
-  geom_hline(yintercept=0,color="gray66")+
+diffBmOAJAtt<-ggplot(attLg[attLg$year>49,],aes(year, bmDiff*100,color=as.factor(run))) +
+  geom_hline(yintercept=100,color="gray66")+
   geom_line(size=0.75)+
+    # scale_y_continuous(expand=c(0,0))+
     scale_x_continuous(breaks=seq(50,100,by=10),labels=seq(0,50,by=10))+
-  labs(x="Year",y="Rel biomass",title="")+
+  labs(x="Year",y="% Biomass",title="")+
   scale_color_manual(values = attrCols,name="Attraction",labels=c("0","3","9","15"))+
   theme_bw()+
-  theme(axis.text = element_text(size = 15),
-        axis.title = element_text(size=20))
+  theme(axis.text = element_text(size = 10),
+        axis.title = element_text(size=14))
 
-diffCtchOAJAtt<-ggplot(attLg[attLg$year>49,],aes(year, ctchDiff,color=as.factor(run))) +
-  geom_hline(yintercept=0,color="gray66")+  
+diffCtchOAJAtt<-ggplot(attLg[attLg$year>49,],aes(year, ctchDiff*100,color=as.factor(run))) +
+  geom_hline(yintercept=100,color="gray66")+  
   geom_line(size=0.75)+
-    labs(x="year",y="Rel catch BM",title = "")+
+    # scale_y_continuous(breaks=c(-10000,-5000,0,5000),expand=c(0,0))+
+    scale_x_continuous(breaks=seq(50,100,by=10),labels=seq(0,50,by=10))+
+    labs(x="year",y="% Catch",title = "")+
     scale_color_manual(values = attrCols,name="Attraction",labels=c("0","3","9","15"))+
     theme_bw()+
-  theme(axis.text = element_text(size = 15),
-        axis.title = element_text(size=20),
-        )
-
-attLgPlts<-diffBmOAJAtt+diffCtchOAJAtt+plot_layout(guides = "collect")
+  theme(axis.text = element_text(size = 10),
+        axis.title = element_text(size=14))
 
 attSm<-jattDat%>%
-  filter(farmDesign=="small")
+  filter(farmDesign=="small",
+         year<101)
 
-diffBmOAJAttS<-ggplot(attSm[attSm$year>49,],aes(year, bmDiff,color=as.factor(run))) +
-    geom_hline(yintercept=0,color="gray66")+
+diffBmOAJAttS<-ggplot(attSm[attSm$year>49,],aes(year, bmDiff*100,color=as.factor(run))) +
+    geom_hline(yintercept=100,color="gray66")+
     geom_line(size=0.75)+
-    labs(x="Year",y="Rel biomass",title="")+
+    # scale_y_continuous(expand=c(0,0))+
+    scale_x_continuous(breaks=seq(50,100,by=10),labels=seq(0,50,by=10))+
+    labs(x="Year",y="% Biomass",title="")+
     scale_color_manual(values = attrCols,name="Attraction",labels=c("0","3","9","15"))+
     theme_bw()+
-  theme(axis.text = element_text(size = 15),
-        axis.title = element_text(size=20))
+  theme(axis.text = element_text(size = 10),
+        axis.title = element_text(size=14))
 
-diffCtchOAJAttS<-ggplot(attSm[attSm$year>49,],aes(year, ctchDiff,color=as.factor(run))) +
-  geom_hline(yintercept=0,color="gray66")+  
+diffCtchOAJAttS<-ggplot(attSm[attSm$year>49,],aes(year, ctchDiff*100,color=as.factor(run))) +
+  geom_hline(yintercept=100,color="gray66")+  
   geom_line(size=0.75)+
-  labs(x="year",y="Rel catch BM",title = "")+
+    # scale_y_continuous(breaks=c(-10000,-5000,0,5000),expand=c(0,0))+
+    scale_x_continuous(breaks=seq(50,100,by=10),labels=seq(0,50,by=10))+
+  labs(x="year",y="% Catch",title = "")+
   scale_color_manual(values = attrCols,name="Attraction",labels=c("0","3","9","15"))+
   theme_bw()+
-  theme(axis.text = element_text(size = 15),
-        axis.title = element_text(size=20),
-        )
+  theme(axis.text = element_text(size = 10),
+        axis.title = element_text(size=14))
 
-attSmPlts<-diffBmOAJAttS+diffCtchOAJAttS+plot_layout(guides = "collect")
 
-attLgPlts/attSmPlts+plot_layout(guides = "collect")
+((diffBmOAJAtt+diffCtchOAJAtt)/(diffBmOAJAttS+diffCtchOAJAttS))+
+  plot_annotation(tag_levels = "A")+
+  plot_layout(guides = "collect")
 
 ```
 
+\newpage
 
-#### Biomass: Farm area x attraction
+## Figure S2
 
 ```{r}
 
+jattDatCE<-read_csv("runs/aqMS/timeJattCE_perc.csv")
 
-sizeAttrBm<-ggplot(msAttrOA2,aes(x=mpaSize,y=diffBm,group=as.factor(attr),color=as.factor(attr)))+
-  geom_hline(yintercept = 0,color="gray66")+
+##### Relative plots
+
+attLgCE<-jattDatCE%>%
+  filter(farmDesign=="large",
+         year<101)
+
+diffBmOAJAttCE<-ggplot(attLgCE[attLgCE$year>49,],aes(year, bmDiff*100,color=as.factor(run))) +
+  geom_hline(yintercept=100,color="gray66")+
+  geom_line(size=0.75)+
+    # scale_y_continuous(expand=c(0,0))+
+    scale_x_continuous(breaks=seq(50,100,by=10),labels=seq(0,50,by=10))+
+  labs(x="Year",y="% Biomass",title="")+
+  scale_color_manual(values = attrCols,name="Attraction",labels=c("0","3","9","15"))+
+  theme_bw()+
+  theme(axis.text = element_text(size = 10),
+        axis.title = element_text(size=14))
+
+diffCtchOAJAttCE<-ggplot(attLgCE[attLgCE$year>49,],aes(year, ctchDiff*100,color=as.factor(run))) +
+  geom_hline(yintercept=100,color="gray66")+  
+  geom_line(size=0.75)+
+    # scale_y_continuous(breaks=c(-10000,-5000,0,5000),expand=c(0,0))+
+    scale_x_continuous(breaks=seq(50,100,by=10),labels=seq(0,50,by=10))+
+    labs(x="year",y="% Catch",title = "")+
+    scale_color_manual(values = attrCols,name="Attraction",labels=c("0","3","9","15"))+
+    theme_bw()+
+  theme(axis.text = element_text(size = 10),
+        axis.title = element_text(size=14))
+
+attSmCE<-jattDatCE%>%
+  filter(farmDesign=="small",
+         year<101)
+
+diffBmOAJAttSCE<-ggplot(attSmCE[attSmCE$year>49,],aes(year, bmDiff*100,color=as.factor(run))) +
+    geom_hline(yintercept=100,color="gray66")+
+    geom_line(size=0.75)+
+    # scale_y_continuous(expand=c(0,0))+
+    scale_x_continuous(breaks=seq(50,100,by=10),labels=seq(0,50,by=10))+
+    labs(x="Year",y="% Biomass",title="")+
+    scale_color_manual(values = attrCols,name="Attraction",labels=c("0","3","9","15"))+
+    theme_bw()+
+  theme(axis.text = element_text(size = 10),
+        axis.title = element_text(size=14))
+
+diffCtchOAJAttSCE<-ggplot(attSmCE[attSmCE$year>49,],aes(year, ctchDiff*100,color=as.factor(run))) +
+  geom_hline(yintercept=100,color="gray66")+  
+  geom_line(size=0.75)+
+    # scale_y_continuous(breaks=c(-10000,-5000,0,5000),expand=c(0,0))+
+    scale_x_continuous(breaks=seq(50,100,by=10),labels=seq(0,50,by=10))+
+  labs(x="year",y="% Catch",title = "")+
+  scale_color_manual(values = attrCols,name="Attraction",labels=c("0","3","9","15"))+
+  theme_bw()+
+  theme(axis.text = element_text(size = 10),
+        axis.title = element_text(size=14))
+
+
+((diffBmOAJAttCE+diffCtchOAJAttCE)/(diffBmOAJAttSCE+diffCtchOAJAttSCE))+
+  plot_annotation(tag_levels = "A")+
+  plot_layout(guides = "collect")
+
+```
+
+\newpage
+
+## Figure S3
+
+Equilibrium biomass differences given different levels of attraction to farms with farms of varying total area coverage for (A) one large contiguous farm and (B) total farm area broken up into smaller separate farms. Catch biomass difference is calculated as the difference between catch biomass with the farm scenario and a scenario with no farm.
+
+
+```{r}
+
+msAttrOA<-read_csv("runs/aqMS/farmEq_msAttrOALg.csv")
+# msAttrOAs<-read_csv("runs/aqMS/farmEq_msAttrOASm.csv") # 2 farms at 10 patches each
+msAttrOAxs<-read_csv("runs/aqMS/farmEq_msAttrOAXSm.csv") # 4 farms at 5 patches each
+nullOA<-read_csv("runs/aqMS/nullOA.csv")
+# write_csv(nullOA,"runs/aqMS/nullOA.csv")
+
+msAttrOA2<-msAttrOA%>%
+  mutate(diffBm=biomass/as.numeric(nullOA[1,"biomass"]),
+         diffCtch=catch/as.numeric(nullOA[1,"catch"]))
+
+# msAttrOAs2<-msAttrOAs%>%
+#   mutate(diffBm=biomass-as.numeric(nullOA[1,"biomass"]),
+#          diffCtch=catch-as.numeric(nullOA[1,"catch"]))
+
+msAttrOAxs2<-msAttrOAxs%>%
+  mutate(diffBm=biomass/as.numeric(nullOA[1,"biomass"]),
+         diffCtch=catch/as.numeric(nullOA[1,"catch"]))
+
+
+##### Plots
+sizeAttrBm<-ggplot(msAttrOA2,aes(x=mpaSize,y=diffBm*100,group=as.factor(attr),color=as.factor(attr)))+
+  geom_hline(yintercept = 100,color="gray66")+
   geom_smooth(size=0.8,se=FALSE)+
-  labs(title = "One large farm",y="Total biomass",x="total farm area")+
-  scale_color_manual(values = attrCols,name="Attraction",labels=c("0","3","9","15"))+
-  theme_bw()
+  labs(title = "One large farm",y="Total biomass",x="total farm area\n(% of total range)")+
+  scale_y_continuous(limits = c(100,500))+
+  scale_x_continuous(breaks = seq(0.2,0.8,by=0.2),labels = seq(0.2,0.8,by=0.2)*100)+
+  scale_color_manual(values = attrCols, name="Attraction",labels=c("None","Low","Moderate","High"))+
+  theme_bw()+
+    theme(axis.text=element_text(size=12),
+          axis.title = element_text(size=16),
+          legend.text = element_text(size=12),
+        legend.title = element_text(size=16),
+        plot.title = element_text(size=20))
 
-sizeAttrBmS<-ggplot()+ 
-  geom_hline(yintercept = 0,color="gray66")+
-  geom_smooth(data=msAttrOAxs2,aes(x=mpaSize,y=diffBm,group=as.factor(attr),color=as.factor(attr)),size=0.8,se=FALSE)+
-  labs(title = "Several smaller farms",y="",x="total farm area")+
-  scale_color_manual(values = attrCols,name="Attraction",labels=c("0","3","9","15"))+
-  theme_bw()
-
-
-sizeAttrBm+sizeAttrBmS+plot_layout(guides = "collect")+plot_annotation(title = "Increasing MPA size at different levels of attraction - OA", theme = theme(plot.title = element_text(size = 18)))
+sizeAttrBmS<-ggplot()+ ## replaced sm with xsm to excentuate differences (smaller farms)
+  geom_hline(yintercept = 100,color="gray66")+
+  geom_smooth(data=msAttrOAxs2,aes(x=mpaSize,y=diffBm*100,group=as.factor(attr),color=as.factor(attr)),size=0.8,se=FALSE)+
+  labs(title = "Several smaller farms",y="",x="total farm area\n(% of total range)")+
+  scale_y_continuous(limits = c(100,500))+
+  scale_x_continuous(breaks = seq(0.2,0.8,by=0.2),labels = seq(0.2,0.8,by=0.2)*100)+
+  scale_color_manual(values = attrCols, name="Attraction",labels=c("None","Low","Moderate","High"))+
+  theme_bw()+
+    theme(axis.text=element_text(size=12),
+          axis.title = element_text(size=16),
+          legend.text = element_text(size=12),
+        legend.title = element_text(size=16),
+        plot.title = element_text(size=20))
 
 ```
 
-***
+```{r fig.height=5}
 
-### Eveything dies
+msAttrCE<-read_csv("runs/aqMS/farmEq_msAttCE.csv")
+# msAttrOAs<-read_csv("runs/aqMS/farmEq_msAttrOASm.csv") # 2 farms at 10 patches each
+msAttrCExs<-read_csv("runs/aqMS/farmEq_msAttCEsm.csv") # 4 farms at 5 patches each
+
+nullCE<-read_csv("runs/aqMS/mpaCEruns.csv")%>%
+  filter(run=="NoMPA",
+         year==max(year))
+
+# nullCE<-read_csv("runs/aqMS/nullCE.csv")
+
+msAttrCE2<-msAttrCE%>%
+  mutate(diffBm=biomass/as.numeric(nullCE[1,"biomass"]),
+         diffCtch=catch/as.numeric(nullCE[1,"catch"]))
+
+msAttrCExs2<-msAttrCExs%>%
+  mutate(diffBm=biomass/as.numeric(nullCE[1,"biomass"]),
+         diffCtch=catch/as.numeric(nullCE[1,"catch"]))
+
+### plot mpaSize by attraction
+
+sizeAttrBmCE<-ggplot(msAttrCE2,aes(x=mpaSize,y=diffBm*100,group=as.factor(attr),color=as.factor(attr)))+
+  geom_hline(yintercept = 100,color="gray66")+
+  geom_smooth(size=0.8,se=FALSE)+
+  #geom_point()+
+  labs(title = "One large farm",y="Biomass (% relative to no farm)",x="")+
+  scale_y_continuous(limits = c(100,150))+
+  scale_x_continuous(breaks = seq(0.2,0.8,by=0.2),labels = seq(0.2,0.8,by=0.2)*100)+
+  scale_color_manual(values = attrCols,name="Attraction",labels=c("None","Low","Moderate","High"))+
+  theme_bw()+
+    theme(axis.text=element_text(size=12),
+          axis.title = element_text(size=16),
+          legend.text = element_text(size=12),
+        legend.title = element_text(size=16),
+        plot.title = element_text(size=20))
+
+sizeAttrBmSce<-ggplot()+ ## replaced sm with xsm to excentuate differences (smaller farms)
+  geom_hline(yintercept = 100,color="gray66")+
+  geom_smooth(data=msAttrCExs2,aes(x=mpaSize,y=diffBm*100,group=as.factor(attr),color=as.factor(attr)),size=0.8,se=FALSE)+
+  labs(title = "Several smaller farms",y="",x="")+
+  scale_y_continuous(limits = c(100,150))+
+  scale_x_continuous(breaks = seq(0.2,0.8,by=0.2),labels = seq(0.2,0.8,by=0.2)*100)+
+  scale_color_manual(values = attrCols,name="Attraction",labels=c("None","Low","Moderate","High"))+
+  theme_bw()+
+    theme(axis.text=element_text(size=12),
+          axis.title = element_text(size=16),
+          legend.text = element_text(size=12),
+        legend.title = element_text(size=16),
+        plot.title = element_text(size=20))
+
+fig2quadBm<-(sizeAttrBmCE+sizeAttrBmSce)/(sizeAttrBm +sizeAttrBmS)+
+  plot_layout(guides = "collect")+
+  plot_annotation(tag_levels = "A")&
+    theme(plot.tag = element_text(face = 'bold'))
+
+```
+
+\newpage
+
+## Figure S4
+
+Equilibrium differences in total biomass and catch biomass for different species based on adult movement for farm scenarios with very damaging effects on the wild population (damage > fishing mortality). Different farm designs are tested by farm size resulting in the indicated number of farms. 
+
 
 ```{r}
 
-amFsOAnegKill<-read_csv("runs/openAccess/farmEq_amFsNegKill.csv")
+amFsOAnegKill<-read_csv("runs/aqMS/farmEq_amFsNegKill.csv")
 
 amFsOAKill<-amFsOAnegKill%>%
   filter(farmSize>1)%>% 
-  mutate(diffBm=biomass-as.numeric(nullOA[1,"biomass"]),
-         diffCtch=catch-as.numeric(nullOA[1,"catch"]))
+  mutate(diffBm=biomass/as.numeric(nullOA[1,"biomass"]),
+         diffCtch=catch/as.numeric(nullOA[1,"catch"]))
 
-amFsBmKill<-ggplot(amFsOAKill,aes(x=adultMove,y=diffBm,group=as.factor(farmSize),color=as.factor(farmSize)))+
+amFsBmKill<-ggplot(amFsOAKill,aes(x=adultMove,y=diffBm*100,group=as.factor(farmSize),color=as.factor(farmSize)))+
+  geom_hline(yintercept = 100,color="gray66")+
   geom_smooth(size=0.8,se=FALSE)+
-  scale_color_manual(values = fsCols,name="# of farms",labels=20/c(2,5,10,20))+
-  labs(x="Adult movement",y="Total biomass (difference from no farm)")+
+  scale_color_manual(values = fsCols,name="Number\nof farms", labels=20/c(2,5,10,20))+
+  scale_y_continuous(limits = c(50,100))+
+  labs(x="Adult movement",y="% Biomass")+
   theme_bw()+
-  theme(plot.title = element_text(hjust = 0.5))
+  theme(plot.title = element_text(hjust = 0.5),
+        axis.text = element_text(size = 12),
+        axis.title = element_text(size=14))
 
 
-amFsCtchKill<-ggplot(amFsOAKill,aes(x=adultMove,y=diffCtch,group=as.factor(farmSize),color=as.factor(farmSize)))+
- geom_hline(yintercept = 0,color="gray66")+
-  geom_smooth(size=0.8,se=FALSE)+
-  scale_color_manual(values = fsCols,name="# of farms",labels=20/c(2,5,10,20))+
-  labs(x="Adult movement",y="Catch biomass (difference from no farm)")+
+amFsCtchKill<-ggplot(amFsOAKill,aes(x=adultMove,y=diffCtch*100,group=as.factor(farmSize),color=as.factor(farmSize)))+
+ geom_hline(yintercept = 100,color="gray66")+
+  geom_smooth(size=0.8,se=FALSE)+#geom_line(size=0.8)+
+  scale_color_manual(values = fsCols,name="Number\nof farms", labels=20/c(2,5,10,20))+
+  scale_y_continuous(limits = c(0,100))+
+  labs(x="Adult movement",y="% Catch")+
   theme_bw()+
-  theme(plot.title = element_text(hjust = 0.5))
+  theme(plot.title = element_text(hjust = 0.5),
+        axis.text = element_text(size = 12),
+        axis.title = element_text(size=14))
 
 
-amFsBmKill + amFsCtchKill + plot_layout(guides = "collect")+
-  plot_annotation(title = "Adult movement by number of farms - high damage", theme = theme(plot.title = element_text(size = 18)))
-
+amFsBmKill + amFsCtchKill + 
+  plot_layout(guides = "collect")+
+  plot_annotation(tag_levels = "A")
 ```
 
