--- a/aqMSfigs.Rmd
+++ b/aqMSfigs.Rmd
@@ -221,7 +221,7 @@ names(fsCols)<-c("20","10","5","2")
 
 ```{r}
 
-jattDat<-read_csv("runs/aqMS/timeJattOA_perc.csv")
+jattDat<-read_csv("runs/openAccess/timeJattOA_perc.csv")
 
 ##### Relative plots
 
@@ -290,7 +290,7 @@ diffCtchOAJAttS<-ggplot(attSm[attSm$year>49,],aes(year, ctchDiff*100,color=as.fa
 
 ```{r}
 
-jattDatCE<-read_csv("runs/aqMS/timeJattCE_perc.csv")
+jattDatCE<-read_csv("runs/constantEffortMSY/timeJattCE_perc.csv")
 
 ##### Relative plots
 
@@ -304,7 +304,7 @@ diffBmOAJAttCE<-ggplot(attLgCE[attLgCE$year>49,],aes(year, bmDiff*100,color=as.f
     # scale_y_continuous(expand=c(0,0))+
     scale_x_continuous(breaks=seq(50,100,by=10),labels=seq(0,50,by=10))+
   labs(x="Year",y="% Biomass",title="")+
-  scale_color_manual(values = attrCols,name="Attraction",labels=c("0","3","9","15"))+
+  scale_color_manual(values = attrCols, name="Attraction",labels=c("None","Low","Moderate","High"))+
   theme_bw()+
   theme(axis.text = element_text(size = 10),
         axis.title = element_text(size=14))
@@ -315,7 +315,7 @@ diffCtchOAJAttCE<-ggplot(attLgCE[attLgCE$year>49,],aes(year, ctchDiff*100,color=
     # scale_y_continuous(breaks=c(-10000,-5000,0,5000),expand=c(0,0))+
     scale_x_continuous(breaks=seq(50,100,by=10),labels=seq(0,50,by=10))+
     labs(x="year",y="% Catch",title = "")+
-    scale_color_manual(values = attrCols,name="Attraction",labels=c("0","3","9","15"))+
+    scale_color_manual(values = attrCols, name="Attraction",labels=c("None","Low","Moderate","High"))+
     theme_bw()+
   theme(axis.text = element_text(size = 10),
         axis.title = element_text(size=14))
@@ -330,7 +330,7 @@ diffBmOAJAttSCE<-ggplot(attSmCE[attSmCE$year>49,],aes(year, bmDiff*100,color=as.
     # scale_y_continuous(expand=c(0,0))+
     scale_x_continuous(breaks=seq(50,100,by=10),labels=seq(0,50,by=10))+
     labs(x="Year",y="% Biomass",title="")+
-    scale_color_manual(values = attrCols,name="Attraction",labels=c("0","3","9","15"))+
+    scale_color_manual(values = attrCols, name="Attraction",labels=c("None","Low","Moderate","High"))+
     theme_bw()+
   theme(axis.text = element_text(size = 10),
         axis.title = element_text(size=14))
@@ -341,7 +341,7 @@ diffCtchOAJAttSCE<-ggplot(attSmCE[attSmCE$year>49,],aes(year, ctchDiff*100,color
     # scale_y_continuous(breaks=c(-10000,-5000,0,5000),expand=c(0,0))+
     scale_x_continuous(breaks=seq(50,100,by=10),labels=seq(0,50,by=10))+
   labs(x="year",y="% Catch",title = "")+
-  scale_color_manual(values = attrCols,name="Attraction",labels=c("0","3","9","15"))+
+  scale_color_manual(values = attrCols, name="Attraction",labels=c("None","Low","Moderate","High"))+
   theme_bw()+
   theme(axis.text = element_text(size = 10),
         axis.title = element_text(size=14))
@@ -362,10 +362,10 @@ Equilibrium biomass differences given different levels of attraction to farms wi
 
 ```{r}
 
-msAttrOA<-read_csv("runs/aqMS/farmEq_msAttrOALg.csv")
+msAttrOA<-read_csv("runs/openAccess/farmEq_msAttrOALg.csv")
 # msAttrOAs<-read_csv("runs/aqMS/farmEq_msAttrOASm.csv") # 2 farms at 10 patches each
-msAttrOAxs<-read_csv("runs/aqMS/farmEq_msAttrOAXSm.csv") # 4 farms at 5 patches each
-nullOA<-read_csv("runs/aqMS/nullOA.csv")
+msAttrOAxs<-read_csv("runs/openAccess/farmEq_msAttrOAXSm.csv") # 4 farms at 5 patches each
+nullOA<-read_csv("runs/openAccess/nullOA.csv")
 # write_csv(nullOA,"runs/aqMS/nullOA.csv")
 
 msAttrOA2<-msAttrOA%>%
@@ -414,11 +414,11 @@ sizeAttrBmS<-ggplot()+ ## replaced sm with xsm to excentuate differences (smalle
 
 ```{r fig.height=5}
 
-msAttrCE<-read_csv("runs/aqMS/farmEq_msAttCE.csv")
+msAttrCE<-read_csv("runs/constantEffortMSY/farmEq_msAttCE.csv")
 # msAttrOAs<-read_csv("runs/aqMS/farmEq_msAttrOASm.csv") # 2 farms at 10 patches each
-msAttrCExs<-read_csv("runs/aqMS/farmEq_msAttCEsm.csv") # 4 farms at 5 patches each
+msAttrCExs<-read_csv("runs/constantEffortMSY/farmEq_msAttCEsm.csv") # 4 farms at 5 patches each
 
-nullCE<-read_csv("runs/aqMS/mpaCEruns.csv")%>%
+nullCE<-read_csv("runs/constantEffortMSY/mpaCEruns.csv")%>%
   filter(run=="NoMPA",
          year==max(year))
 
@@ -479,7 +479,7 @@ Equilibrium differences in total biomass and catch biomass for different species
 
 ```{r}
 
-amFsOAnegKill<-read_csv("runs/aqMS/farmEq_amFsNegKill.csv")
+amFsOAnegKill<-read_csv("runs/openAccess/farmEq_amFsNegKill.csv")
 
 amFsOAKill<-amFsOAnegKill%>%
   filter(farmSize>1)%>% 
