--- a/aqMSfigs.Rmd
+++ b/aqMSfigs.Rmd
@@ -33,6 +33,8 @@ Attraction is varied and benefits from the farm are included but held constant. 
 
 ```{r fig.height=5}
 
+zerosDf<-data.frame(mpaSize=c(0,0,0,0),attr=c(1,3,9,15),biomass=c(NA,NA,NA,NA),catch=c(NA,NA,NA,NA),diffBm=c(NA,NA,NA,NA),diffCtch=c(0,0,0,0))
+
 ### Weak fishery management
 
 msAttrOA<-read_csv("runs/openAccess/farmEq_msAttrOALg.csv")
@@ -44,11 +46,15 @@ nullOA<-read_csv("runs/openAccess/nullOA.csv")
 ### Calculate biomass and catch differences 
 msAttrOA2<-msAttrOA%>%
   mutate(diffBm=biomass-as.numeric(nullOA[1,"biomass"]),
-         diffCtch=catch-as.numeric(nullOA[1,"catch"]))
+         diffCtch=catch-as.numeric(nullOA[1,"catch"]))%>%
+  filter(mpaSize<=0.2)%>%
+  bind_rows(zerosDf,.)
 
 msAttrOAxs2<-msAttrOAxs%>%
   mutate(diffBm=biomass-as.numeric(nullOA[1,"biomass"]),
-         diffCtch=catch-as.numeric(nullOA[1,"catch"]))
+         diffCtch=catch-as.numeric(nullOA[1,"catch"]))%>%
+  filter(mpaSize<=0.2)%>%
+  bind_rows(zerosDf,.)
 
 ### plot mpaSize by attraction
 
@@ -60,10 +66,11 @@ names(attrCols)<-c("1","3","9","15")
 
 sizeAttrCatch<-ggplot(msAttrOA2,aes(x=mpaSize,y=diffCtch,group=as.factor(attr),color=as.factor(attr)))+
   geom_hline(yintercept = 0,color="gray66")+
+  # geom_line(size=0.8)+
   geom_smooth(size=0.8,se=FALSE)+
   labs(title = "One large farm",y="Catch biomass",x="")+
-  scale_y_continuous(limits = c(-1750,1000))+
-  scale_x_continuous(breaks = seq(0.2,0.8,by=0.2),labels = seq(0.2,0.8,by=0.2)*100)+
+  scale_y_continuous(limits = c(0,800))+
+  scale_x_continuous(breaks = seq(0,0.2,by=0.05),labels = seq(0,0.2,by=0.05)*100)+
   scale_color_manual(values = attrCols,name="Attraction",labels=c("None","Low","Moderate","High"))+
   theme_bw()+
     theme(axis.text=element_text(size=12),
@@ -73,10 +80,11 @@ sizeAttrCatch<-ggplot(msAttrOA2,aes(x=mpaSize,y=diffCtch,group=as.factor(attr),c
 
 sizeAttrCatchS<-ggplot()+ ## replaced sm with xsm to accentuate differences (smaller farms)
   geom_hline(yintercept = 0,color="gray66")+
+  # geom_line(data=msAttrOAxs2,aes(x=mpaSize,y=diffCtch,group=as.factor(attr),color=as.factor(attr)),size=0.8)+
   geom_smooth(data=msAttrOAxs2,aes(x=mpaSize,y=diffCtch,group=as.factor(attr),color=as.factor(attr)),size=0.8,se=FALSE)+
   labs(title = "Several smaller farms",y="",x="")+
-  scale_y_continuous(limits = c(-1750,1000))+
-  scale_x_continuous(breaks = seq(0.2,0.8,by=0.2),labels = seq(0.2,0.8,by=0.2)*100)+
+  scale_y_continuous(limits = c(0,800))+
+  scale_x_continuous(breaks = seq(0,0.2,by=0.05),labels = seq(0,0.2,by=0.05)*100)+
   scale_color_manual(values = attrCols,name="Attraction",labels=c("None","Low","Moderate","High"))+
   theme_bw()+
     theme(axis.text=element_text(size=12),
@@ -92,7 +100,7 @@ x_lab <-
 
 fig1Plts<-sizeAttrCatch+sizeAttrCatchS+plot_layout(guides = "collect")+plot_annotation(tag_levels = "A", theme = theme(plot.title = element_text(size = 18)))
 
-# (fig1Plts/x_lab) + plot_layout(heights = c(1,0.05))
+(fig1Plts/x_lab) + plot_layout(heights = c(1,0.05))
 
 ```
 
