adds code for 0-20% runs and writes size/attr output to csvs

--- a/modelRuns.rmd
+++ b/modelRuns.rmd
@@ -387,16 +387,56 @@ msAttPlFun<-function(mpaSzVec,attrVec,pK,farmYrsVec,farmSz,mgmt){
 }
 
 
+# ### one large area - OA
+# msAttrOA<-msAttPlFun(mpaSzVec = seq(0.1,0.9,by=0.1),
+#                      attrVec = c(1,3,9,15), 
+#                      pK=ptchKp,
+#                      farmYrsVec=rep(TRUE,length(mpaYr:sYrs)),
+#                      farmSz = NA,
+#                      mgmt = "OA")
+# 
+# ### several smaller areas - OA
+# msAttrOAxs<-msAttPlFun(mpaSzVec = seq(0.1,0.9,by=0.1),
+#                      attrVec = c(1,3,9,15), 
+#                      pK=ptchKp,
+#                      farmYrsVec=rep(TRUE,length(mpaYr:sYrs)),
+#                      farmSz=5, #this divides the farm area into farms of size 10
+#                      mgmt = "oa")
+# 
+# ### one large area - CE
+# msAttrCE<-msAttPlFun(mpaSzVec = seq(0.1,0.7,by=0.2),
+#                      attrVec = c(10,100,1000),
+#                      pK=ptchKp,
+#                      farmYrsVec=rep(TRUE,length(mpaYr:sYrs)),
+#                      farmSz = NA,
+#                      mgmt = "ce")
+# 
+# ### several small areas - CE
+# msAttrCExs<-msAttPlFun(mpaSzVec = seq(0.1,0.7,by=0.2),
+#                      attrVec = c(10,100,1000),
+#                      pK=ptchKp,
+#                      farmYrsVec=rep(TRUE,length(mpaYr:sYrs)),
+#                      farmSz = 5,
+#                      mgmt = "ce")
+# 
+# # write_csv(msAttrOA,"runs/openAccess/farmEq_msAttOALg.csv")
+# # write_csv(msAttrOAxs,"runs/openAccess/farmEq_msAttOAXSm.csv")
+# 
+# # write_csv(msAttrCE,"runs/constantEffortMSY/farmEq_msAttCELg.csv")
+# # write_csv(msAttrCExs,"runs/constantEffortMSY/farmEq_msAttCEXSm.csv")
+
+##### re-running limiting total farm area to 20% but doubling the granularity to 5% increments instead of 10%
+
 ### one large area - OA
-msAttrOA<-msAttPlFun(mpaSzVec = seq(0.1,0.9,by=0.1),
+msAttrOA_20<-msAttPlFun(mpaSzVec = seq(0.05,0.2,by=0.05),
                      attrVec = c(1,3,9,15), 
                      pK=ptchKp,
                      farmYrsVec=rep(TRUE,length(mpaYr:sYrs)),
                      farmSz = NA,
-                     mgmt = "OA")
+                     mgmt = "oa")
 
 ### several smaller areas - OA
-msAttrOAxs<-msAttPlFun(mpaSzVec = seq(0.1,0.9,by=0.1),
+msAttrOAxs_20<-msAttPlFun(mpaSzVec = seq(0.05,0.2,by=0.05),
                      attrVec = c(1,3,9,15), 
                      pK=ptchKp,
                      farmYrsVec=rep(TRUE,length(mpaYr:sYrs)),
@@ -404,7 +444,7 @@ msAttrOAxs<-msAttPlFun(mpaSzVec = seq(0.1,0.9,by=0.1),
                      mgmt = "oa")
 
 ### one large area - CE
-msAttrCE<-msAttPlFun(mpaSzVec = seq(0.1,0.7,by=0.2),
+msAttrCE_20<-msAttPlFun(mpaSzVec = seq(0.05,0.2,by=0.05),
                      attrVec = c(10,100,1000),
                      pK=ptchKp,
                      farmYrsVec=rep(TRUE,length(mpaYr:sYrs)),
@@ -412,18 +452,19 @@ msAttrCE<-msAttPlFun(mpaSzVec = seq(0.1,0.7,by=0.2),
                      mgmt = "ce")
 
 ### several small areas - CE
-msAttrCExs<-msAttPlFun(mpaSzVec = seq(0.1,0.7,by=0.2),
+msAttrCExs_20<-msAttPlFun(mpaSzVec = seq(0.05,0.2,by=0.05),
                      attrVec = c(10,100,1000),
                      pK=ptchKp,
                      farmYrsVec=rep(TRUE,length(mpaYr:sYrs)),
                      farmSz = 5,
                      mgmt = "ce")
 
-# write_csv(msAttrOA,"runs/openAccess/farmEq_msAttOALg.csv")
-# write_csv(msAttrOAxs,"runs/openAccess/farmEq_msAttOAXSm.csv")
+# write_csv(msAttrOA_20,"runs/openAccess/farmEq_msAttOALg_20.csv")
+# write_csv(msAttrOAxs_20,"runs/openAccess/farmEq_msAttOAXSm_20.csv")
+# 
+# write_csv(msAttrCE_20,"runs/constantEffortMSY/farmEq_msAttCELg_20.csv")
+# write_csv(msAttrCExs_20,"runs/constantEffortMSY/farmEq_msAttCEXSm_20.csv")
 
-# write_csv(msAttrCE,"runs/constantEffortMSY/farmEq_msAttCELg.csv")
-# write_csv(msAttrCExs,"runs/constantEffortMSY/farmEq_msAttCEXSm.csv")
 
 ```
 
@@ -483,7 +524,36 @@ mpaMgmtAMPlFunMat<-function(mpaSzVec,amVec,farmSz,attr,pK,mImp,farmYrsVec){
 
 
 ### Varies total farm area (mpaSize) and is run for both OA and CE --> with benefits
-mpaMgmtAMBen<-mpaMgmtAMPlFunMat(mpaSzVec=seq(0.1,0.9,by=0.1),
+# mpaMgmtAMBen<-mpaMgmtAMPlFunMat(mpaSzVec=seq(0.1,0.9,by=0.1),
+#                   attr = 5,
+#                   amVec= c(0,3,20,60),
+#                   pK=ptchKp,
+#                   farmSz = 5,
+#                   mImp=0.8, ## benefit bc decreases nat mort
+#                   farmYrsVec=rep(TRUE,length(mpaYr:sYrs))) 
+# 
+# mpaMgmtAMNeg<-mpaMgmtAMPlFunMat(mpaSzVec=seq(0.1,0.9,by=0.1),
+#                   attr = 5,
+#                   amVec= c(0,3,20,60),
+#                   farmSz = 5,
+#                   pK = ptchKp,
+#                   mImp = 1.2, ## damage bc increases nat mort
+#                   farmYrsVec=rep(TRUE,length(mpaYr:sYrs))) 
+# 
+# mpaMgmtAMInert<-mpaMgmtAMPlFunMat(mpaSzVec=seq(0.1,0.9,by=0.1),
+#                   attr = 5,
+#                   amVec= c(0,3,20,60),
+#                   farmSz = 5,
+#                   pK = ptchKp,
+#                   mImp = 1, ## damage bc increases nat mort
+#                   farmYrsVec=rep(TRUE,length(mpaYr:sYrs))) 
+# # write_csv(mpaMgmtAMBen,"runs/aqMS/farmEq_mpaMgmtAMBen.csv")
+# # write_csv(mpaMgmtNeg,"runs/aqMS/farmEq_mpaMgmtNeg.csv")
+
+
+##### re-running limiting total farm area to 20% but doubling the granularity to 5% increments instead of 10%
+
+mpaMgmtAMBen_20<-mpaMgmtAMPlFunMat(mpaSzVec=seq(0.05,0.2,by=0.05),
                   attr = 5,
                   amVec= c(0,3,20,60),
                   pK=ptchKp,
@@ -491,7 +561,7 @@ mpaMgmtAMBen<-mpaMgmtAMPlFunMat(mpaSzVec=seq(0.1,0.9,by=0.1),
                   mImp=0.8, ## benefit bc decreases nat mort
                   farmYrsVec=rep(TRUE,length(mpaYr:sYrs))) 
 
-mpaMgmtAMNeg<-mpaMgmtAMPlFunMat(mpaSzVec=seq(0.1,0.9,by=0.1),
+mpaMgmtAMNeg_20<-mpaMgmtAMPlFunMat(mpaSzVec=seq(0.05,0.2,by=0.05),
                   attr = 5,
                   amVec= c(0,3,20,60),
                   farmSz = 5,
@@ -499,14 +569,14 @@ mpaMgmtAMNeg<-mpaMgmtAMPlFunMat(mpaSzVec=seq(0.1,0.9,by=0.1),
                   mImp = 1.2, ## damage bc increases nat mort
                   farmYrsVec=rep(TRUE,length(mpaYr:sYrs))) 
 
-mpaMgmtAMInert<-mpaMgmtAMPlFunMat(mpaSzVec=seq(0.1,0.9,by=0.1),
+mpaMgmtAMInert_20<-mpaMgmtAMPlFunMat(mpaSzVec=seq(0.05,0.2,by=0.05),
                   attr = 5,
                   amVec= c(0,3,20,60),
                   farmSz = 5,
                   pK = ptchKp,
                   mImp = 1, ## damage bc increases nat mort
                   farmYrsVec=rep(TRUE,length(mpaYr:sYrs))) 
-# write_csv(mpaMgmtAMBen,"runs/aqMS/farmEq_mpaMgmtAMBen.csv")
-# write_csv(mpaMgmtNeg,"runs/aqMS/farmEq_mpaMgmtNeg.csv")
+# write_csv(mpaMgmtAMBen_20,"runs/aqMS/farmEq_mpaMgmtAMBen_20.csv")
+# write_csv(mpaMgmtNeg_20,"runs/aqMS/farmEq_mpaMgmtNeg_20.csv")
 
 ```
